Basic Map using Planetary assets
Added cosmetic assets to the will implement platforms behind the assets for collision at a later date.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <body>
   <script src="PlayerMovement.js"></script>
+  <script src="DrawMap.js"></script>
+  <script src="GetMap.js"></script>
   <script src="sketch.js"></script>
 </body>
 
