--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="PlayerMovement.js"></script>
   <script src="DrawMap.js"></script>
   <script src="GetMap.js"></script>
+  <script src="updatePortals.js"></script>
   <script src="sketch.js"></script>
 </body>
 
