Enemies with some alien

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="DrawMap.js"></script>
   <script src="GetMap.js"></script>
   <script src="updatePortals.js"></script>
+  <script src="Enemies.js"></script>
   <script src="sketch.js"></script>
 </body>
 
