--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="GetMap.js"></script>
   <script src="updatePortals.js"></script>
   <script src="Enemies.js"></script>
+  <script src="Health.js"></script>
   <script src="sketch.js"></script>
 </body>
 
