--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <script src="updatePortals.js"></script>
   <script src="Enemies.js"></script>
   <script src="Health.js"></script>
+  <script src="Teleportation.js"></script>
+  <script src="Collision.js"></script>
   <script src="sketch.js"></script>
 </body>
 
