--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="Health.js"></script>
   <script src="Teleportation.js"></script>
   <script src="Collision.js"></script>
+  <script src="GameState.js"></script>
   <script src="sketch.js"></script>
 </body>
 
