--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <script src="Collision.js"></script>
   <script src="GameState.js"></script>
   <script src="sketch.js"></script>
+  <script src="boss.js"></script>
 </body>
 
 </html>
